// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a PIN Enter screen PIN Enter renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
        >
          <View
            style={Object {}}
          >
            <Image
              source={
                Object {
                  "default": "",
                }
              }
              style={
                Object {
                  "alignSelf": "center",
                  "height": 120,
                  "marginBottom": 20,
                  "resizeMode": "contain",
                  "width": 120,
                }
              }
            />
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginBottom": 16,
                  "textAlign": "center",
                }
              }
            >
              PINEnter.EnterPIN
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 24,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      },
                      Object {
                        "backgroundColor": "#313132",
                        "borderColor": "#FFFFFFFF",
                        "borderRadius": 5,
                        "borderWidth": 1,
                        "justifyContent": "flex-start",
                        "paddingHorizontal": 12,
                        "paddingVertical": 4,
                      },
                    ]
                  }
                >
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <TextInput
                    accessibilityLabel="PINEnter.EnterPIN"
                    accessible={true}
                    autoCapitalize="characters"
                    autoCorrect={false}
                    autoFocus={true}
                    blurOnSubmit={false}
                    caretHidden={true}
                    clearButtonMode="never"
                    disableFullscreenUI={true}
                    keyboardType="numeric"
                    maxLength={6}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onPressOut={[Function]}
                    spellCheck={false}
                    style={
                      Object {
                        "bottom": 0,
                        "fontSize": 1,
                        "left": 0,
                        "opacity": 0.01,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    testID="com.ariesbifold:id/EnterPIN"
                    textContentType="password"
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexShrink": 1,
                    "marginVertical": 10,
                    "paddingHorizontal": 10,
                  }
                }
              >
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityLabel="PINEnter.Unlock"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/Enter"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    PINEnter.Unlock
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;

exports[`displays a PIN Enter screen PIN Enter renders correctly when logged out message is present 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
        >
          <View
            style={Object {}}
          >
            <Image
              source={
                Object {
                  "default": "",
                }
              }
              style={
                Object {
                  "alignSelf": "center",
                  "height": 120,
                  "marginBottom": 20,
                  "resizeMode": "contain",
                  "width": 120,
                }
              }
            />
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginBottom": 16,
                  "textAlign": "center",
                }
              }
            >
              PINEnter.LockedOut
            </Text>
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginBottom": 16,
                  "textAlign": "center",
                }
              }
            >
              PINEnter.ReEnterPIN
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 24,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      },
                      Object {
                        "backgroundColor": "#313132",
                        "borderColor": "#FFFFFFFF",
                        "borderRadius": 5,
                        "borderWidth": 1,
                        "justifyContent": "flex-start",
                        "paddingHorizontal": 12,
                        "paddingVertical": 4,
                      },
                    ]
                  }
                >
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#313132",
                        "height": 48,
                        "paddingHorizontal": 2,
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={1}
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 26,
                          "fontWeight": "bold",
                          "lineHeight": 48,
                          "textAlign": "center",
                        }
                      }
                    />
                  </View>
                  <TextInput
                    accessibilityLabel="PINEnter.EnterPIN"
                    accessible={true}
                    autoCapitalize="characters"
                    autoCorrect={false}
                    autoFocus={true}
                    blurOnSubmit={false}
                    caretHidden={true}
                    clearButtonMode="never"
                    disableFullscreenUI={true}
                    keyboardType="numeric"
                    maxLength={6}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onPressOut={[Function]}
                    spellCheck={false}
                    style={
                      Object {
                        "bottom": 0,
                        "fontSize": 1,
                        "left": 0,
                        "opacity": 0.01,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    testID="com.ariesbifold:id/EnterPIN"
                    textContentType="password"
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexShrink": 1,
                    "marginVertical": 10,
                    "paddingHorizontal": 10,
                  }
                }
              >
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityLabel="PINEnter.Unlock"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/Enter"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    PINEnter.Unlock
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;
